fix whitespace

--- a/style.css
+++ b/style.css
@@ -323,7 +323,7 @@ body {
         display: flex;
         flex-direction: column;
         text-align: center;
-        gap: var(--space-400);
+        gap: var(--space-300);
         order: 3;
         grid-column: 1 / 3;
         grid-row: 2;
@@ -423,23 +423,27 @@ body {
 
     .hero::before {
         content: '';
-        display: inline-block;
+        display: block;
         background: url(/assets/desktop/image-hero-left.png) bottom left/contain no-repeat;
     }
 
     .hero__cta {
         grid-column: 2;
         grid-row: 1;
+        gap: var(--space-400);
     }
 
     .hero::after {
         content: '';
-        display: inline-block;
+        display: block;
         background: url(/assets/desktop/image-hero-right.png) bottom right/contain no-repeat;
+        position: relative;
+        top: 1rem;
     }
 
     .text__display-header {
         font-size: var(--font-xxxl);
+        /* min-width: 28rem; */
         min-width: 28rem;
     }
 
